tests/errors/pre_asm/endmcr_unexpected_chars/endmcr_unexpected_end.as
; unexpected characters after endmcr
mcr my_mcr
mov r1,r2
endmcr a